
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int val ;
struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_port; int sin_family; struct in_addr sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sin ;


 int AF_INET ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int bind (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int listen (int,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;

int tcp_bind(char* server, int port){
 int sd, ret, val=1;
 struct sockaddr_in sin;
 struct hostent *host;
 host = gethostbyname(server);
 sd=socket(AF_INET,SOCK_STREAM,0);
 if(sd==-1){
      printf("[!] cannot create socket\n");
  exit(0);
 }
 memset(&sin,0,sizeof(sin));
 sin.sin_addr=*((struct in_addr *) host->h_addr);
 sin.sin_family=AF_INET;
 sin.sin_port=htons(port);
     setsockopt(sd,SOL_SOCKET,SO_REUSEADDR,&val,sizeof(val));
 ret = bind(sd,(struct sockaddr *)&sin,sizeof(sin));
 if(ret==-1){
  printf("[!] cannot bind socket\n");
  exit(0);
 }
 listen(sd,5);
 return(sd);
}
